[FABRIC-1096] Fixing quickstarts-archetypes itest (spring-boot works too!)